# zp

./: .dockerignore  .gitignore  BOOTSTRAP.md  CLAUDE.md  Cargo.toml  KNOWN_TEST_FAILURES.md  NEXT_TASKS.md
.claude/: mcp.json  settings.json
.claude/agents/: bench-runner.md  crypto-impl.md  fuzz-gen.md  platform-agents.md  platform-android.md  platform-browser.md  platform-ios.md
.claude/analysis/: git-workflow-enhancement-proposal.md
.claude/commands/: audit.md  bench.md  check.md  coverage.md  decision.md  escalate.md  fix-bug.md  fuzz.md  new-feature.md  release.md  review-code.md  smart-commit-dry.md  smart-commit-quick.md  smart-commit.md  smart-push-quick.md  smart-push.md  spec.md  vector.md
crates/zp-core/: Cargo.toml
crates/zp-core/src/: error.rs  frame.rs  lib.rs  session.rs  stream.rs  token.rs
crates/zp-crypto/: Cargo.toml
crates/zp-crypto/src/: aead.rs  error.rs  kdf.rs  kex.rs  lib.rs  pake.rs  suite.rs
crates/zp-crypto/src/kex/: ecdh_p256.rs  ml_kem.rs  x25519.rs
crates/zp-ffi/: Cargo.toml  build.rs
crates/zp-ffi/src/: lib.rs
crates/zp-platform/: Cargo.toml
crates/zp-platform/src/: android.rs  browser.rs  error.rs  ios.rs  lib.rs  mock.rs  traits.rs
crates/zp-platform/src/ios/: in_memory.rs  mod.rs  network_monitor.rs  secure_enclave.rs
crates/zp-platform/tests/: ios_simulator_test.rs  key_provider_test.rs
crates/zp-transport/: Cargo.toml
crates/zp-transport/src/: error.rs  lib.rs  quic.rs  tcp.rs  webrtc.rs  websocket.rs
crates/zp-transport/src/quic/: mod.rs  tests.rs
crates/zp-transport/src/websocket/: mod.rs  tests.rs
crates/zp-transport/tests/: README_WEBRTC_MANUAL_TESTS.md  concurrency_tests.rs  edge_case_tests.rs  encrypted_record_integration.rs  error_path_tests.rs  quic_integration.rs  tcp_integration.rs  test_helpers.rs  webrtc_docker_e2e.rs  webrtc_error_tests.rs  webrtc_integration.rs  websocket_integration.rs
crates/zp-transport/tests/signaling/: .dockerignore  Dockerfile  README.md  client.rs  docker-compose.yml  embedded_server.rs  mod.rs  run_docker_test.sh  server.rs  test_peer.rs
docs/: CHANGELOG.md  PHASE_5_HARDENING_ANALYSIS.md  TEST_VECTORS.md  WEBRTC_DOCKER_TEST_PLAN.md  ZP_UI_TESTING_FRAMEWORK.md  zp_specification_v1.0.md
docs/decisions/: DA-0001.md  README.md
docs/decisions/pending/: DA-0001.md  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: frame.rs
tests/conformance/: Cargo.toml  README.md  crypto_test.rs  frame_conformance.rs  quic_spec_3_4.rs  session_test.rs  tcp_spec_3_3_7.rs  webrtc_spec_sections_5_and_6_4.rs  websocket_spec_appendix_d.rs
tests/fuzz/: Cargo.toml  README.md
tests/fuzz/fuzz_targets/: fuzz_frame_parser.rs
tests/integration/: README.md
tests/interop/: README.md
tools/zp-decision-bridge/: package.json  pnpm-lock.yaml  tsconfig.json
tools/zp-decision-bridge/src/: index.ts
