[package]
name = "zp-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core protocol engine for the zp transport protocol"

[dependencies]
# Internal dependencies
zp-crypto = { path = "../zp-crypto" }
zp-platform = { path = "../zp-platform" }

# Security
zeroize = { workspace = true }
subtle = { workspace = true }

# Crypto utilities
sha2 = { workspace = true }
rand = { workspace = true }
aes-gcm = { workspace = true }
chacha20poly1305 = { workspace = true }

# Utilities
bytes = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
twox-hash = { workspace = true }

# Async runtime
tokio = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
hex = { workspace = true }

[features]
default = ["std"]
std = []
# Test-only feature: Exposes Session test helpers for overflow testing
test-helpers = []
