[package]
name = "zp-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Cryptographic primitives for the zp transport protocol"

[dependencies]
# Approved cryptographic crates (per crypto-impl agent + DA-0001)
ring = { workspace = true }
ml-kem = { workspace = true }
kem = { workspace = true }
opaque-ke = { workspace = true }  # NCC Group audited, replaces spake2 per DA-0001
chacha20poly1305 = { workspace = true }
aes-gcm = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
x25519-dalek = { workspace = true }
p256 = { workspace = true }

# Security requirements
zeroize = { workspace = true }
subtle = { workspace = true }

# Utilities
bytes = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }
hex = { workspace = true }

[features]
default = ["std"]
std = []
fips = ["aws-lc-rs"]

[dependencies.aws-lc-rs]
workspace = true
optional = true
