[package]
name = "zp-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Platform-specific integrations for the zp protocol"

[dependencies]
# Internal dependencies
# Note: zp-platform intentionally does not depend on zp-core to avoid circular dependencies
# (zp-core uses KeyProvider trait from zp-platform)

# Cryptography
aes-gcm = { workspace = true }
hkdf = { workspace = true }
sha2 = { workspace = true }
rand = { workspace = true }
zeroize = { workspace = true }

# Utilities
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "ios")'.dependencies]
security-framework = "2.11"
security-framework-sys = "2.11"
core-foundation = "0.9"

[target.'cfg(target_os = "android")'.dependencies]
# Android-specific dependencies will go here

[target.'cfg(target_arch = "wasm32")'.dependencies]
# WASM/browser dependencies will go here

[dev-dependencies]
hex = { workspace = true }

[features]
default = []
ios = []
android = []
browser = []
