[package]
name = "zp-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Transport layer implementations for the zp protocol"

[dependencies]
# Internal dependencies
zp-core = { path = "../zp-core" }
zp-crypto = { path = "../zp-crypto" }

# QUIC transport
quinn = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Utilities
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = { workspace = true }

[features]
default = ["quic", "tcp"]
quic = []
tcp = []
websocket = []
webrtc = []
