[package]
name = "zp-transport"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Transport layer implementations for the zp protocol"

[dependencies]
# Internal dependencies
zp-core = { path = "../zp-core" }
zp-crypto = { path = "../zp-crypto" }

# QUIC transport
quinn = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }

# WebSocket transport
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }

# WebRTC transport
webrtc = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Utilities
bytes = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
serde = { workspace = true }
serde_json = "1.0"

# Binary dependencies (webrtc-test-peer)
reqwest = { version = "0.11", features = ["json"], optional = true }
tracing-subscriber = { version = "0.3", optional = true }

[[bin]]
name = "webrtc-test-peer"
path = "bin/webrtc-test-peer.rs"
required-features = ["test-peer"]

[dev-dependencies]
# Enable test-helpers feature for Session test accessors
zp-core = { path = "../zp-core", features = ["test-helpers"] }
proptest = { workspace = true }
serial_test = "3.0"  # Sequential execution for stress tests to prevent resource contention
warp = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
serde = { workspace = true }
tracing-subscriber = "0.3"

[features]
default = ["quic", "tcp"]
quic = []
tcp = []
websocket = []
webrtc = []
test-peer = ["webrtc", "reqwest", "tracing-subscriber"]
