[package]
name = "zp-conformance-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
zp-core = { path = "../../crates/zp-core" }
zp-crypto = { path = "../../crates/zp-crypto" }
hex = "0.4"
sha2 = "0.10"
rand = "0.8"
zeroize = "1.8"

[[test]]
name = "crypto"
path = "crypto_test.rs"

[[test]]
name = "frame"
path = "frame_conformance.rs"

[[test]]
name = "session"
path = "session_test.rs"
