[package]
name = "zp-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
zp-core = { path = "../../crates/zp-core" }

[dependencies.libfuzzer-sys]
version = "0.4"

# Prevent this from interfering with workspace dependencies
[[bin]]
name = "fuzz_frame_parser"
path = "fuzz_targets/fuzz_frame_parser.rs"
test = false
doc = false
bench = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
